# ra-unresolved-field-repro

./: Cargo.toml  README.md
crate-a/: Cargo.toml
crate-a/src/: main.rs
crate-b/: Cargo.toml
crate-b/src/: lib.rs
crate-c/: Cargo.toml
crate-c/src/: lib.rs
