[package]
name = "ra-unresolved-field-repro"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-b = { path = "../crate-b" }
tokio = {version = "1", features = ["full"]}

[dev-dependencies]
crate-c = { path = "../crate-c" }
